# 2d_renderer

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build_glew_for_mingw.bat  setup_glad.py  verify_libs.bat
include/: expression.h  pixel.h  pixel_buffer.h  renderer.h  shader.h  texture.h
shaders/: display.frag  display.vert  raytrace.comp  raytrace.frag
src/: expression.cpp  main.cpp  pixel_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp
